[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.2.2"
ffmpeg = "1.4"
youtube_dl = "^2021.12.17"
PyNaCl = "1.5.0"
yt-dlp = "2023.3.4"
ffprobe3 = "0.1.2"
ffprobe = "0.5"
pydub = "^0.25.1"
io-uuid = "0.0.5"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"